[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sre-openenv"
version = "0.1.0"
description = "Production-Grade OpenEnv RL Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "websockets",
    "pyyaml",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "mock_infra*", "tasks*", "agents*", "graders*", "rag*"]